# template-tensors

./: .gitmodules  CMakeLists.txt  COPYING  doxyfile.in  package.xml
app/: CMakeLists.txt  compute_optical_flow.cu  profile_indexstrategy.cpp  profile_indexstrategy.cu  profile_memcpy.cu  render_skewed.cu
cmake/: TemplateTensorsConfig.cmake.in
cmake/modules/: FindCUDNN.cmake  FindFreeImage.cmake  FindPCL.cmake  FindSOIL.cmake  Findcnpy.cmake
docker/: test.py
docker/ubuntu18.04-gcc8.4-cuda10.1/: Dockerfile
docker/ubuntu18.04-gcc8.4-cuda10.2/: Dockerfile
docker/ubuntu20.04-gcc9.3-cuda11.0/: Dockerfile
include/template_tensors/: TemplateTensors.h
include/template_tensors/aggregator/: Assign.h  Constant.h  Elwise.h  Filter.h  Helper.h  HistogramPartial.h  HistogramTotal.h  MapInput.h  MapOutput.h  MiscOps.h  Multi.h  StatisticsOps.h
include/template_tensors/concurrency/atomic/: Functor.h  TryVariable.h  Types.h  WaitVariable.h
include/template_tensors/concurrency/locking/: ConditionalUniqueTryLock.h  Mutex.h  UniqueLock.h  UniqueTryLock.h
include/template_tensors/cuda/: Cuda.h  CudaAtomic.h  CudaGrid.h  CudaMutex.h  CudaRandom.h  CudaReduction.h
include/template_tensors/field/: CoordinateTransform.h  Differentiate.h  FromSupplier.h  Interpolation.h  Map.h  Wrap.h
include/template_tensors/file/: Binvox.h  Flo.h
include/template_tensors/file/colmap/: Metadata.h
include/template_tensors/file/slippy_maps/: TileLoader.h
include/template_tensors/for_each/: Auto.h  Helper.h  Sequential.h
include/template_tensors/geometry/: Generation.h  RegionGrowing.h
include/template_tensors/geometry/projection/: Orthographic.h  Pinhole.h
include/template_tensors/geometry/render/: DeviceMutexRasterizer.h  DeviceRasterizer.h  Shader.h
include/template_tensors/geometry/transform/: AxisAngle.h  Rigid.h  Rotation.h  ScaledRigid.h  Translation.h
include/template_tensors/interface/boost_python/: Tensor.h  Util.h
include/template_tensors/interface/cnpy/: Cnpy.h
include/template_tensors/interface/cppflow/: CppFlow.h
include/template_tensors/interface/cublas/: Cublas.h  Gemm.h
include/template_tensors/interface/cudnn/: ConvolutionForward.h  Cudnn.h  Helper.h
include/template_tensors/interface/cupy/: Util.h
include/template_tensors/interface/cv/: Debug.h  Mat.h  ReadWrite.h
include/template_tensors/interface/dlpack/: Dispatch.h  PyCapsule.h  SafeWrapper.h  Tensor.h  Util.h
include/template_tensors/interface/eigen/: Decomposition.h  Mat.h
include/template_tensors/interface/freeimage/: FreeImage.h  TensorInterface.h
include/template_tensors/interface/jtuple/: Tuple.h
include/template_tensors/interface/numpy/: Util.h
include/template_tensors/interface/nvof/: NVOF.h
include/template_tensors/interface/openmp/: ForEach.h
include/template_tensors/interface/orocos_kdl/: Kdl.h
include/template_tensors/interface/pcl/: PointCloud.h
include/template_tensors/interface/pybind11/: Buffer.h
include/template_tensors/interface/python/: GIL.h
include/template_tensors/interface/sensor_msgs/: SensorMsgs.h
include/template_tensors/interface/soil/: Soil.h
include/template_tensors/interface/std/: PrintChrono.h  SortByKey.h  String.h  Vector.h
include/template_tensors/interface/tbb/: ForEach.h
include/template_tensors/interface/tf/: Tf.h
include/template_tensors/interface/tf2/: Tf2.h
include/template_tensors/interface/thrust/: Vector.h
include/template_tensors/interface/tinyply/: Tinyply.h
include/template_tensors/iterate/: Adapt.h  Count.h  Filter.h  StoreIterators.h  Transform.h  Util.h
include/template_tensors/numeric/: FixedFloatingPoint.h  LogProb.h
include/template_tensors/point_cloud/: SortGrid.h
include/template_tensors/point_cloud/nearest_neighbors/: FeatureTransform.h  GridSearch.h  NearestNeighbors.h
include/template_tensors/tensor/base/: Dimensions.h  Iterator.h  Maskable.h  StoreDimensions.h  TensorBase.h
include/template_tensors/tensor/for_each/: Auto.h  Device.h  DeviceArray.h  Helper.h  Local.h  LocalArray.h
include/template_tensors/tensor/helper/: Concepts.h  DynamicCompatibility.h  DynamicDimsCoords.h  ElementType.h  StaticCompatibility.h  StaticDimsCoords.h  SubtypeHelpers.h
include/template_tensors/tensor/linear_algebra/: Convolution.h  CrossProduct.h  Diag.h  Elwise.h  GaussianMethod.h  Geo.h  IdentityMatrix.h  MatrixProduct.h  MiscOps.h  Quaternion.h  RotationMatrix.h  (+1 more)
include/template_tensors/tmp/: Deduce.h  Reflection.h  TypeSequence.h  TypeSequence.hpp  ValueSequence.h  ValueSequence.hpp
include/template_tensors/util/: Array.h  Assert.h  Console.h  Constexpr.h  Dispatch.h  Endianness.h  Functor.h  Math.h  Memory.h  Ptr.h  Tuple.h  Util.h
src/: CMakeLists.txt  Cublas.cu  Cudnn.cu
test/: CMakeLists.txt  HostDeviceTest.h
test/cuda/: TestCuda.h
test/field/: TestField.h
test/file/: TestBinvox.h  TestFlo.h
test/geometry/: TestProjections.h  TestRegionGrowing.h  TestRender.h  TestTransform.h
test/interface/: TestCereal.h  TestCnpy.h  TestCppFlow.h  TestCublas.h  TestCudnn.h  TestDlPack.h  TestEigen.h  TestFreeImage.h  TestJtuple.h  TestNVOF.h  TestOpenCv.h  TestOpenMp.h  TestOrocosKdl.h  TestPcl.h  TestSensorMsgs.h  TestSoil.h  TestStd.h  TestTbb.h  TestTf.h  TestTf2.h  TestThrust.h  TestTinyply.h
test/interface/boost/cupy/: TestBoostCupy.py  TestBoostCupyLib.h
test/interface/boost/dlpack/: TestBoostDlPack.py  TestBoostDlPackLib.h
test/interface/boost/numpy/: TestBoostNumpy.h  TestBoostNumpy.py  TestBoostNumpyLib.h
test/interface/boost/tensorflow/: TestBoostTensorflow.py  TestBoostTensorflowLib.h
test/linking/: TestLink2.cpp  TestLink2.cu
test/numeric/: TestNumeric.h
test/point_cloud/: TestSortGrid.h
test/tensor/: TestAssignment.h  TestBasics.h  TestConvolution.h  TestDeviceForEach.h  TestElwiseOps.h  TestForEach.h  TestGaussianMethod.h  TestHostDeviceTransfer.h  TestIndexStrategy.h  TestMasking.h  TestMatrixOps.h  TestMiscOps.h  TestRandom.h  TestReductionBroadcasting.h  TestShapeOps.h  TestSparse.h
test/util/: TestAggregator.h  TestDispatch.h  TestIterator.h  TestPtr.h  TestTuple.h
(+74 files in other folders)
